// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchBar component testing Desktop/Tablet SearchBar handlers work as intended with no ref 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Desktop/Tablet SearchBar handlers work as intended with no ref 2`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Desktop/Tablet SearchBar matches snapshot - blur 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
    style="transition: box-shadow 0.15s linear;"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Desktop/Tablet SearchBar matches snapshot - button blur 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Desktop/Tablet SearchBar matches snapshot - button hover 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Desktop/Tablet SearchBar matches snapshot - focus 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
    style="transition: box-shadow 0.15s linear; box-shadow: 0px 0px 10px var(--primary);"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Desktop/Tablet SearchBar matches snapshot 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Mobile SearchBar matches snapshot - collapsed 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-jwTyAe jYNhMr buAVEQ"
  >
    <div
      class="sc-jJLAfE linsqF hidden"
      id="searchBarWrapper"
    >
      <div
        aria-hidden="true"
        class="sc-hwkwBN cEGuER close"
        data-testid="back-button"
        id="back-button"
      >
        <i
          class="fa-solid fa-chevron-left"
        />
        <span
          class="sc-fhHczv jxaKYX"
        >
          Close search bar
        </span>
      </div>
      <div
        class="sc-hjsuWn fpmNqB"
      >
        <input
          aria-hidden="true"
          class="sc-kNOymR jSwGbX collapsed"
          id="search-input"
          name="search"
          placeholder="Search"
          spellcheck="true"
          type="search"
        />
      </div>
    </div>
    <button
      class="sc-dYwGCk dNiLGu"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Open search bar
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Mobile SearchBar matches snapshot - expanded 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-jwTyAe jYNhMr buAVEQ"
  >
    <div
      class="sc-jJLAfE linsqF hidden"
      id="searchBarWrapper"
    >
      <div
        aria-hidden="true"
        class="sc-hwkwBN cEGuER close"
        data-testid="back-button"
        id="back-button"
      >
        <i
          class="fa-solid fa-chevron-left"
        />
        <span
          class="sc-fhHczv jxaKYX"
        >
          Close search bar
        </span>
      </div>
      <div
        class="sc-hjsuWn fpmNqB"
      >
        <input
          aria-hidden="true"
          class="sc-kNOymR jSwGbX collapsed"
          id="search-input"
          name="search"
          placeholder="Search"
          spellcheck="true"
          type="search"
        />
      </div>
    </div>
    <button
      class="sc-dYwGCk dNiLGu"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Open search bar
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Mobile SearchBar matches snapshot - expanded 2`] = `
<div>
  <div
    class="sc-ggWZvA sc-jwTyAe jYNhMr buAVEQ expanded"
  >
    <div
      class="sc-jJLAfE linsqF"
      id="searchBarWrapper"
    >
      <div
        aria-hidden="false"
        class="sc-hwkwBN cEGuER open"
        data-testid="back-button"
        id="back-button"
      >
        <i
          class="fa-solid fa-chevron-left"
        />
        <span
          class="sc-fhHczv jxaKYX"
        >
          Close search bar
        </span>
      </div>
      <div
        class="sc-hjsuWn fpmNqB"
      >
        <input
          aria-hidden="false"
          class="sc-kNOymR jSwGbX"
          id="search-input"
          name="search"
          placeholder="Search"
          spellcheck="true"
          type="search"
        />
      </div>
    </div>
    <button
      class="sc-dYwGCk dNiLGu"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Open search bar
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Mobile SearchBar matches snapshot - expanded to collapsed 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-jwTyAe jYNhMr buAVEQ expanded"
  >
    <div
      class="sc-jJLAfE linsqF"
      id="searchBarWrapper"
    >
      <div
        aria-hidden="false"
        class="sc-hwkwBN cEGuER open"
        data-testid="back-button"
        id="back-button"
      >
        <i
          class="fa-solid fa-chevron-left"
        />
        <span
          class="sc-fhHczv jxaKYX"
        >
          Close search bar
        </span>
      </div>
      <div
        class="sc-hjsuWn fpmNqB"
      >
        <input
          aria-hidden="false"
          class="sc-kNOymR jSwGbX"
          id="search-input"
          name="search"
          placeholder="Search"
          spellcheck="true"
          type="search"
        />
      </div>
    </div>
    <button
      class="sc-dYwGCk dNiLGu"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Open search bar
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing Mobile SearchBar matches snapshot - expanded to collapsed 2`] = `
<div>
  <div
    class="sc-ggWZvA sc-jwTyAe jYNhMr buAVEQ"
  >
    <div
      class="sc-jJLAfE linsqF hidden"
      id="searchBarWrapper"
    >
      <div
        aria-hidden="true"
        class="sc-hwkwBN cEGuER close"
        data-testid="back-button"
        id="back-button"
      >
        <i
          class="fa-solid fa-chevron-left"
        />
        <span
          class="sc-fhHczv jxaKYX"
        >
          Close search bar
        </span>
      </div>
      <div
        class="sc-hjsuWn fpmNqB"
      >
        <input
          aria-hidden="true"
          class="sc-kNOymR jSwGbX collapsed"
          id="search-input"
          name="search"
          placeholder="Search"
          spellcheck="true"
          type="search"
        />
      </div>
    </div>
    <button
      class="sc-dYwGCk dNiLGu"
      data-testid="search-button"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Open search bar
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;
